--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,13 @@ project(src LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(HEADERS
+    vec3.h
+)
+
+set(SOURCES
+    main.cpp
+)
+
+
 add_executable(src main.cpp)
